Fix text overflow

--- a/src/app/dashboard/components/app-list/app-list.component.scss
+++ b/src/app/dashboard/components/app-list/app-list.component.scss
@@ -22,6 +22,13 @@
     justify-content: center;
     align-items: center;
   }
+
+  .card-header {
+    h2 {
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+    }
+  }
 }
 
 /*::ng-deep {
